Load YarpDeviceParamsParserGenerator.cmake via `find_package`

--- a/doc/release/yarp_3_11/000_yarp_3_11.md
+++ b/doc/release/yarp_3_11/000_yarp_3_11.md
@@ -18,3 +18,4 @@ Fixes
 * Fixed static build of devices, port-monitors, carriers and, more in general, yarp_dev plugins
 * Fixed `yarp::sig::Sound::getDuration()`, previously it was always returning 0
 * Fixed `yarp::dev::ReturnValue` serialization when used from command line (e.g. yarp rpc /xxx)
+* The `YarpDeviceParamsParserGenerator.cmake` module is now always included by `find_package(YARP)`
